styles/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

html, body {
  background-color: white;
}

h1, h2, h3, h4, h5, h6 {
  font-family: 'Noto Serif Display', sans-serif;
}

button {
  font-family: 'Quicksand', sans-serif;
}

p {
  font-family: 'Urbanist', sans-serif;
}

* {
  transition: all 0.3s ease;
}

.page-transition-enter {
  opacity: 0;
}

.page-transition-enter-active {
  opacity: 1;
}

.page-transition-exit {
  opacity: 1;
}

.page-transition-exit-active {
  opacity: 0;
}

.hero {
  position: relative;
  overflow: hidden;
  transition: background-image 1s ease-in-out;
}

.hero::before {
  content: "";
  position: absolute;
  inset: 0;
  background: inherit;
  background-size: cover;
  background-position: center;
  z-index: -1;
  opacity: 0;
  transition: opacity 1s ease-in-out;
}

.hero[data-loaded='true']::before {
  opacity: 1;
}

@layer base {
  .prose {
    max-width: 65ch;
    line-height: 1.75;
    color: #333;
  }

  .prose h1,
  .prose h2,
  .prose h3,
  .prose h4,
  .prose h5,
  .prose h6 {
    color: #1a202c;
  }

  .prose blockquote {
    padding-left: 2rem;
    font-style: italic;
    color: #4a5568;
  }

  .prose ul,
  .prose ol {
    padding-left: 1.5rem;
  }

}

